@@ -75,7 +75,7 @@ public enum ConfigNodes {
 	    PLUGIN_USING_ICONOMY("plugin.interfacing.using_iconomy","true"),
 	    PLUGIN_USING_QUESTIONER("plugin.interfacing.using_questioner","true"),
 	    PLUGIN_USING_PERMISSIONS("plugin.interfacing.using_permissions","true"),
-	    PLUGIN_DAY_INTERVAL("plugin.day_interval","86400"),
+	    PLUGIN_DAY_INTERVAL("plugin.day_interval","1d"),
 	    PLUGIN_DEBUG_MODE("plugin.debug_mode","false"),
 	    PLUGIN_DEV_MODE("plugin.dev_mode",""),
 	    PLUGIN_DEV_MODE_ENABLE("plugin.dev_mode.enable","false"),
@@ -100,7 +100,7 @@ public enum ConfigNodes {
 	    PROT_SWITCH_ID("protection.switch_ids","25,54,61,62,64,69,70,71,72,77,96,84,93,94"),
 	    PROT_MOB_REMOVE_TOWN("protection.town_mob_removal_entities","Monster,WaterMob,Flying,Slime"),
 	    PROT_MOB_REMOVE_WORLD("protection.world_mob_removal_entities","WaterMob,Flying,Slime"),
-	    PROT_MOB_REMOVE_SPEED("protection.mob_removal_speed","5"),
+	    PROT_MOB_REMOVE_SPEED("protection.mob_removal_speed","5s"),
 	    PROT_CHEAT("protection.cheat_protection","true"),
 	    UNCLAIMED_ZONE("unclaimed",""),
 	    UNCLAIMED_ZONE_BUILD("unclaimed.unclaimed_zone_build","false"),
@@ -111,10 +111,10 @@ public enum ConfigNodes {
 	    //UNCLAIMED_ZONE_NAME("unclaimed.unclaimed_zone_name",""),
 	    //UNCLAIMED_PLOT_NAME("unclaimed.unclaimed_plot_name",""),
 	    RES_SETTING("resident_settings",""),
-	    RES_SETTING_INACTIVE_AFTER_TIME("resident_settings.inactive_after_time","86400"),
+	    RES_SETTING_INACTIVE_AFTER_TIME("resident_settings.inactive_after_time","1h"),
 	    RES_SETTING_DELETE_OLD_RESIDENTS("resident_settings.delete_old_residents",""),
 	    RES_SETTING_DELETE_OLD_RESIDENTS_ENABLE("resident_settings.delete_old_residents.enable","false"),
-	    RES_SETTING_DELETE_OLD_RESIDENTS_TIME("resident_settings.delete_old_residents.deleted_after_time","5184000"),
+	    RES_SETTING_DELETE_OLD_RESIDENTS_TIME("resident_settings.delete_old_residents.deleted_after_time","60d"),
 	    RES_SETTING_DEFAULT_TOWN_NAME("resident_settings.default_town_name",""),
 	    ECO("economy",""),
 	    ECO_PRICE_TOWN_SPAWN_TRAVEL("economy.price_town_spawn_travel","0.0"),
