@@ -427,3 +427,4 @@ v0.74.1:
     - Title and Surnames can now be limited in length by the setting 'max_title_length' in config.yml.
     - Towny is now an observable object.  This allows other plugins to observe events that happen in Towny.
     - Towny now abbreviates it's residents lists when displayed, for easier reading.
+    - Better formatting for times in the config eg. 1d6h20s.
